make it can cross compile with arm-linux-gnueabi-gcc toolchain make it work with configure script

--- a/Makefile.in
+++ b/Makefile.in
@@ -166,6 +166,9 @@ include $(srcdir)/kexec/Makefile
 #
 include $(srcdir)/kdump/Makefile
 
+# libfdt
+include $(srcdir)/kexec/libfdt/Makefile
+
 #
 # kexec_test (test program)
 #
