--- a/Makefile.in
+++ b/Makefile.in
@@ -151,6 +151,7 @@ include $(srcdir)/util_lib/Makefile
 #
 include $(srcdir)/util/Makefile
 
+
 #
 # purgatory (code between kernels)
 #
@@ -161,13 +162,14 @@ include $(srcdir)/purgatory/Makefile
 #
 include $(srcdir)/kexec/Makefile
 
+# libfdt
+# include $(srcdir)/kexec/libfdt/Makefile
 
 # kdump (read a crashdump from memory)
 #
 include $(srcdir)/kdump/Makefile
 
-# libfdt
-include $(srcdir)/kexec/libfdt/Makefile
+
 
 #
 # kexec_test (test program)
