fix small build error for search libfdt.h when build kexec/arch/arm/kexec-zImage-arm.c

--- a/kexec/Makefile
+++ b/kexec/Makefile
@@ -61,6 +61,7 @@ include $(srcdir)/kexec/arch/ppc64/Makefile
 include $(srcdir)/kexec/arch/s390/Makefile
 include $(srcdir)/kexec/arch/sh/Makefile
 include $(srcdir)/kexec/arch/x86_64/Makefile
+
 include $(srcdir)/kexec/libfdt/Makefile
 
 KEXEC_SRCS += $($(ARCH)_KEXEC_SRCS)
@@ -80,7 +81,7 @@ $(KEXEC): $(KEXEC_OBJS) $(UTIL_LIB) $(FDT_LIB)
 	@$(MKDIR) -p $(@D)
 	$(LINK.o) -o $@ $^ $(LIBS)
 
-$(KEXEC): CPPFLAGS+=-I$(srcdir)/kexec/arch/$(ARCH)/include
+$(KEXEC): CPPFLAGS+=-I$(srcdir)/kexec/arch/$(ARCH)/include -I$(srcdir)/kexec/libfdt
 
 $(KEXEC_MANPAGE): kexec/kexec.8
 	@$(MKDIR) -p     $(MANDIR)/man8
