[ARM]: add device-specific to deal with qcom,msm-id

--- a/kexec/arch/arm/Makefile
+++ b/kexec/arch/arm/Makefile
@@ -14,6 +14,10 @@ arm_KEXEC_SRCS+= kexec/arch/arm/kexec-zImage-arm.c
 arm_KEXEC_SRCS+= kexec/arch/arm/kexec-uImage-arm.c
 arm_KEXEC_SRCS+= kexec/arch/arm/kexec-arm.c
 arm_KEXEC_SRCS+= kexec/arch/arm/crashdump-arm.c
+arm_KEXEC_SRCS+= kexec/arch/arm/mach.c
+arm_KEXEC_SRCS+= kexec/arch/arm/mach-hammerhead.c
+arm_KEXEC_SRCS+= kexec/arch/arm/mach-m8.c
+arm_KEXEC_SRCS+= kexec/arch/arm/mach-shamu.c
 arm_KEXEC_SRCS+= kexec/fs2dt.c
 
 libfdt_SRCS += $(LIBFDT_SRCS:%=kexec/libfdt/%)
@@ -31,4 +35,4 @@ arm_PHYS_TO_VIRT = kexec/arch/arm/phys_to_virt.c
 dist += kexec/arch/arm/Makefile $(arm_KEXEC_SRCS) $(arm_PHYS_TO_VIRT)	\
 	kexec/arch/arm/iomem.h kexec/arch/arm/phys_to_virt.h \
 	kexec/arch/arm/crashdump-arm.h kexec/arch/arm/kexec-arm.h \
-	kexec/arch/arm/include/arch/options.h
+	kexec/arch/arm/mach.h kexec/arch/arm/include/arch/options.h
